kubernetes/sample/example-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example2
  labels:
    app: example2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example2
  template:
    metadata:
      labels:
        app: example2
    spec:
      containers:
      - name: httpecho
        image: hashicorp/http-echo
        args:
        - "-listen=:8080"
        - "-text=hello world 2"
        ports:
        - containerPort: 8080
