kubernetes/sample/example-service2.yaml
kind: Service
apiVersion: v1
metadata:
  name: example2
spec:
  type: ClusterIP
  selector:
    app: example2
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
