kubernetes/sample/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example
  annotations:
    kubernetes.io/ingress.class: caddy
spec:
  rules:
  - host: test.ingress.wavy.sh
    http:
      paths:
      - path: /hello1
        backend:
          serviceName: example1
          servicePort: 8080
      - path: /hello2
        backend:
          serviceName: example2
          servicePort: 8080
  - host: test2.ingress.wavy.sh
    http:
      paths:
      - path: /hello1
        backend:
          serviceName: example1
          servicePort: 8080
      - path: /hello2
        backend:
          serviceName: example2
          servicePort: 8080
#   tls:
#   - secretName: ssl-example2.kubernetes.localhost
#     hosts:
#     - example2.caddy.dev
